2006-07-10 Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/base_scripts/base.material, media/materials/programs/All_In_Wonder.cg, media/materials/programs/All_In_Wonder.program, media/materials/scripts/buildings.material, media/materials/scripts/malebuilder.material, media/materials/scripts/tools.material: updated materials to use inheritance in Ogre 1.2+

2006-07-10 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.cpp: Write version info to the log.
	* src/components/ogre/widgets/Bootstrap.lua, src/components/ogre/widgets/Chat.lua, src/components/ogre/widgets/EntityPicker.lua, src/components/ogre/widgets/Give.lua: added comments
	
2006-07-10 Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am, WFUT.jar: Added a copy of WFUT.jar so that people don't need to go hunting for it.
	
2006-07-10 Erik Hjortsberg  <erik@katastrof.nu>
	
	* src/services/config/ConfigService.cpp: append the version info to the media directory
	* src/services/server/ServerService.cpp: send the version info when connecting

2006-07-10 Erik Hjortsberg  <erik@katastrof.nu>

	* ember.in, ember, configure.ac: 
		* remove the ember script and instead use the ember.in which will set the correct media path based on the version
		* cleaned up the script and adapted to a newer version of WFUT.jar
	* configfile: removed it since we now specify the server at the command line
	* ember.bat: updated for new version of WFUT.jar and new channel
	* ember.conf: added version info
	* ember.spec.in: updated, don't know if it will work though, we'll use autopackage mainly. I'll test it when i have time, if it doesn't work it's ok to yell at me for it.
	
2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/gui, src/services/image: removed obsolete code
	* src/components/ogre/EmberOgre.cpp: added more version info

2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.cpp: added some version info

2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>
